@@ -1,10 +1,5 @@
 package edens.zac.portfolio.backend.services;
 
-import com.drew.imaging.ImageMetadataReader;
-import com.drew.metadata.Directory;
-import com.drew.metadata.Metadata;
-import com.drew.metadata.Tag;
-import com.drew.metadata.xmp.XmpDirectory;
 import edens.zac.portfolio.backend.entity.CatalogEntity;
 import edens.zac.portfolio.backend.entity.ImageEntity;
 import edens.zac.portfolio.backend.model.ImageModel;
@@ -12,22 +7,14 @@ import edens.zac.portfolio.backend.model.ImageSearchModel;
 import edens.zac.portfolio.backend.repository.CatalogRepository;
 import edens.zac.portfolio.backend.repository.ImageRepository;
 import edens.zac.portfolio.backend.specification.ImageSpecification;
+import jakarta.persistence.EntityNotFoundException;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
 
-import java.io.IOException;
-import java.io.InputStream;
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Objects;
-import java.util.Optional;
-import java.util.Set;
-import java.util.stream.Collectors;
+import java.util.*;
 
 @Slf4j
 @Service
@@ -49,21 +36,32 @@ public class ImageServiceImpl implements ImageService {
         log.info("ImageServiceImpl initialized");
     }
 
+    /**
+     * Processes and saves a single image file with associated metadata, categorizing it as either a blog or catalog image.
+     *
+     * @param file The MultipartFile containing the image to be processed
+     * @param type The category type, must be either "catalog" or "blog"
+     * @return A Map containing extracted metadata and processing results including image ID and URL
+     * @throws IllegalArgumentException if the type parameter is not "catalog" or "blog"
+     */
     @Override
     @Transactional
     public Map<String, String> postImages(MultipartFile file, String type) {
+        if (type == null || (!type.equals("catalog") && !type.equals("blog"))) {
+            throw new IllegalArgumentException("Type must be either 'catalog' or 'blog'");
+        }
+
         try {
             log.info("Posting Image: {} of type: {}", file.getOriginalFilename(), type);
 
-            // Part 1: Extract metadata
+            // 1: Extract metadata
             // Return it even if we hit any exceptions later on
             Map<String, String> imageMetadata = imageProcessingUtil.extractImageMetadata(file);
 
-            // Part 2: Determine catalog name
+            // 2: Determine catalog name
             String contextName = "default";
 
-            // Part 3: add Catalog name to image if exists
-            // TODO: For now, this lives here, but we should assume that 'uploadImage' will be done via 'createCatalog' or 'createBlog'.
+            // 3: add Catalog name to image if exists
             if ("catalog".equals(type) && imageMetadata.containsKey("data")) {
                 String date = imageMetadata.get("date");
                 if (date != null && date.length() >= 7) {
@@ -71,12 +69,11 @@ public class ImageServiceImpl implements ImageService {
                 }
             }
 
-            // Part 3: Process and Save the image using the shared utility
-            // TODO: Update our 'contextName' so that it is from our API call, not from a 'date' value
+            // 4: Process and Save the image using the shared utility
             ImageEntity savedImage = imageProcessingUtil.processAndSaveImage(file, type, contextName);
             log.info("Image processed and saved with ID: {}", savedImage.getId());
 
-            // Add ID to metadata response
+            // 5. Add ID to metadata response
             imageMetadata.put("id", savedImage.getId().toString());
             imageMetadata.put("imageUrlWeb", savedImage.getImageUrlWeb());
 
@@ -92,73 +89,116 @@ public class ImageServiceImpl implements ImageService {
         }
     }
 
+    /**
+     * Processes and associates multiple images with a specific catalog.
+     *
+     * @param images List of MultipartFile objects containing the images to be processed
+     * @param catalogTitle The title of the catalog to associate with the images
+     * @return List of ImageModel objects representing the processed images
+     * @throws EntityNotFoundException if the specified catalog doesn't exist
+     * @throws RuntimeException if there's an error during image processing
+     */
     @Override
     @Transactional
-    public List<ImageModel> postImagesForCatalog(List<MultipartFile> images, String catalogTitle) throws IOException {
+    public List<ImageModel> postImagesForCatalog(List<MultipartFile> images, String catalogTitle) {
+        try {
+            if (images == null || images.isEmpty()) {
+                log.warn("No images provided for catalog {}", catalogTitle);
+                return Collections.emptyList();
+            }
+            String catalogTitleWithoutExtension = catalogTitle.replace("_", " ");
 
-        String catalogTitleWithoutExtension = catalogTitle.replace("_", " ");
+            // 1. Find the catalog
+            CatalogEntity catalogEntity = catalogRepository.findByTitle(catalogTitleWithoutExtension)
+                    .orElseThrow(() -> new EntityNotFoundException("Catalog not found with title: " + catalogTitleWithoutExtension));
 
-        // Part 1. Find the catalog
-        CatalogEntity catalogEntity = catalogRepository.findByTitle(catalogTitleWithoutExtension)
-                .orElseThrow(() -> new RuntimeException("No catalog found for slug " + catalogTitleWithoutExtension));
+            // 2. Process all images in a batch
+            List<ImageEntity> newImages = imageProcessingUtil.batchProcessAndSaveImages(
+                    images,
+                    catalogTitleWithoutExtension,
+                    catalogEntity
+            );
 
-        // Process all images in a batch
-        List<ImageEntity> newImages = imageProcessingUtil.batchProcessAndSaveImages(
-                images,
-                catalogTitleWithoutExtension,
-                catalogEntity
-        );
-
-
-        if (!newImages.isEmpty()) {
-            List<ImageEntity> allImages = new ArrayList<>(catalogEntity.getImages());
-            allImages.addAll(newImages);
-            catalogEntity.setImages(allImages);
-            catalogRepository.save(catalogEntity);
-
-            catalogEntity = catalogRepository.findById(catalogEntity.getId()).orElseThrow();
-
+            if (!newImages.isEmpty()) {
+                catalogEntity.getImages().addAll(newImages);
+            }
+            return catalogEntity.getImages().stream()
+                    .filter(Objects::nonNull)
+                    .map(imageProcessingUtil::convertImageEntityToImageModel)
+                    .toList();
+        } catch (Exception e) {
+            log.error("Error posting images for catalog {}: {}", catalogTitle, e.getMessage(), e);
+            throw new RuntimeException("Failed to process images for catalog: " + e.getMessage(), e);
         }
-        return catalogEntity.getImages().stream()
-                .filter(Objects::nonNull)
-                .map(imageProcessingUtil::convertImageEntityToImageModel)
-                .collect(Collectors.toList());
     }
 
+    /**
+     * Retrieves an image by its unique identifier, including its associated catalogs.
+     *
+     * @param imageId The unique identifier of the image to retrieve
+     * @return An Optional containing the ImageModel if found, or an empty Optional if not found
+     */
     @Override
     @Transactional(readOnly = true) // use readOnly for fetch operations
-    public ImageModel getImageById(Long imageId) {
-
-        Optional<ImageEntity> imageOpt = imageRepository.findByIdWithCatalogs(imageId); // required type UUID, provided: Long
-
-        return imageOpt.map(this::convertToModalImage).orElse(null);
+    public Optional<ImageModel> getImageById(Long imageId) {
+        return imageRepository.findByIdWithCatalogs(imageId)
+                .map(imageProcessingUtil::convertImageEntityToImageModel);
     }
 
+    /**
+     * Retrieves all images associated with a specific catalog.
+     *
+     * @param catalogTitle The title of the catalog whose images are to be retrieved
+     * @return A List of ImageModel objects representing all images in the specified catalog
+     */
     @Override
     @Transactional(readOnly = true)
     public List<ImageModel> getAllImagesByCatalog(String catalogTitle) {
-
-        Set<Long> imageIds = imageRepository.findImageIdsByCatalogTitle(catalogTitle);
-
-        // Corrected stream operation to handle Optional correctly
-        List<ImageEntity> images = imageIds.stream()
-                .map(imageRepository::findByIdWithCatalogs) // This returns Stream<Optional<Image>> // OLD::=> .map(id -> imageRepository.findByIdWithCatalogs(id))
-                .filter(Optional::isPresent) // Filter to only present Optionals
-                .map(Optional::get) // Extract Image from Optional
-                .toList(); // Collect to List<Image>
-
-//        List<Image> images = imageRepository.findByCatalogName(catalogTitle);
-        return images.stream()
-                .map(this::convertToModalImage)
-                .collect(Collectors.toList());
+        return imageRepository.findImagesByCatalogTitle(catalogTitle).stream()
+                .map(imageProcessingUtil::convertImageEntityToImageModel)
+                .toList();
     }
 
+    /**
+     * Updates an existing image with new metadata and properties.
+     *
+     * @param imageModel The ImageModel containing updated information
+     * @return The updated ImageEntity after persisting changes
+     * @throws IllegalArgumentException if the image model or its ID is null
+     * @throws EntityNotFoundException if no image exists with the specified ID
+     */
     @Override
-    public List<ImageModel> updateImages(ImageModel imageModel) {
-        return null;
+    @Transactional
+    public ImageEntity updateImage(ImageModel imageModel) {
+        if (imageModel == null || imageModel.getId() == null) {
+            throw new IllegalArgumentException("Image model or ID cannot be null");
+        }
+
+        log.info("Updating image with ID: {}", imageModel.getId());
+
+        Optional<ImageEntity> existingImageOpt = imageRepository.findByIdWithCatalogs(imageModel.getId());
+        
+        if (existingImageOpt.isEmpty()) {
+            log.warn("Image with ID {} not found", imageModel.getId());
+            throw new EntityNotFoundException("Image with ID " + imageModel.getId() + " not found");
+        }
+        
+        ImageEntity existingImage = existingImageOpt.get();
+
+        // Update only the properties we want to allow changing
+        ImageEntity updatedImage = imageProcessingUtil.updateImageProperties(existingImage, imageModel);
+
+        return imageRepository.save(updatedImage);
     }
 
+    /**
+     * Searches for images based on specified criteria.
+     *
+     * @param searchParams An ImageSearchModel containing the search criteria
+     * @return A List of ImageModel objects matching the search criteria
+     */
     @Override
+    @Transactional(readOnly = true)
     public List<ImageModel> searchByData(ImageSearchModel searchParams) {
 
         List<ImageEntity> results = imageRepository.findAll(
@@ -166,142 +206,40 @@ public class ImageServiceImpl implements ImageService {
         );
 
         return results.stream()
-                .map(this::convertToModalImage)
-                .collect(Collectors.toList());
+                .map(imageProcessingUtil::convertImageEntityToImageModel)
+                .toList();
     }
 
-    // TODO: Connect this to an endpoint. DOES IT MATTER, if we can filter by rating on the frontend?
+    /**
+     * Extracts metadata from an image file without saving it to the database.
+     *
+     * @param file The MultipartFile containing the image to extract metadata from
+     * @return A Map containing extracted metadata or error information if extraction fails
+     */
+    @Override
     @Transactional(readOnly = true)
-    public Optional<ImageModel> getImageByIdAndMinRating(Long imageId, Integer minRating) {
-        Optional<ImageEntity> imageOpt = imageRepository.findByIdWithCatalogsAndMinRating(imageId, minRating);
-        return imageOpt.map(this::convertToModalImage);
-    }
-
-
-    private ImageModel convertToModalImage(ImageEntity image) {
-        List<String> catalogNames = image.getCatalogs().stream().map(CatalogEntity::getTitle).collect(Collectors.toList());
-
-        ImageModel modalImage = new ImageModel(); //  is not public in 'edens.zac.portfolio.backend.model.ModalImage'. Cannot be accessed from outside package
-        modalImage.setTitle(image.getTitle());
-        modalImage.setImageWidth(image.getImageWidth());
-        modalImage.setImageHeight(image.getImageHeight());
-        modalImage.setIso(image.getIso());
-        modalImage.setAuthor(image.getAuthor());
-        modalImage.setRating(image.getRating());
-        modalImage.setFStop(image.getFStop());
-        modalImage.setLens(image.getLens());
-        modalImage.setCatalog(catalogNames);
-        modalImage.setBlackAndWhite(image.getBlackAndWhite());
-        modalImage.setShutterSpeed(image.getShutterSpeed());
-        modalImage.setRawFileName(image.getRawFileName());
-        modalImage.setCamera(image.getCamera());
-        modalImage.setFocalLength(image.getFocalLength());
-        modalImage.setLocation(image.getLocation());
-        modalImage.setImageUrlWeb(image.getImageUrlWeb());
-        modalImage.setImageUrlSmall(image.getImageUrlSmall());
-        modalImage.setImageUrlRaw(image.getImageUrlRaw());
-        modalImage.setCreateDate(image.getCreateDate());
-        modalImage.setUpdateDate(image.getUpdateDate());
-        modalImage.setId(image.getId());
-        return modalImage;
-    }
-
-    // TODO: Frontend CDN selects images, calls this endpoint to GET metadata back again, without uploading
     public Map<String, String> getImageMetadata(MultipartFile file) {
-        try (InputStream inputStream = file.getInputStream()) {
-            Metadata metadata = ImageMetadataReader.readMetadata(inputStream);
-
-            List<Map<String, Object>> directoriesList = collectAllDirectoriesMetadata(metadata);
-            Map<String, String> imageReturnMetadata = new HashMap<>();
-            imageReturnMetadata.put("focalLength", extractValueForKey(directoriesList, "Focal Length 35"));
-            imageReturnMetadata.put("fStop", extractValueForKey(directoriesList, "F-Number"));
-            imageReturnMetadata.put("shutterSpeed", extractValueForKey(directoriesList, "Shutter Speed Value"));
-            imageReturnMetadata.put("iso",
-                    Optional.ofNullable(extractValueForKey(directoriesList, "ISO Speed Ratings"))
-                            .map(String::valueOf)
-                            .map(Integer::valueOf)
-                            .map(String::valueOf)
-                            .orElse(null));
-            imageReturnMetadata.put("author", extractValueForKey(directoriesList, "Artist"));
-            imageReturnMetadata.put("lens", extractValueForKey(directoriesList, "Lens Model"));
-            imageReturnMetadata.put("lensSpecific", extractValueForKey(directoriesList, "Lens Specification"));
-            imageReturnMetadata.put("camera", extractValueForKey(directoriesList, "Model"));
-            imageReturnMetadata.put("date", extractValueForKey(directoriesList, "Date/Time Original"));
-            imageReturnMetadata.put("imageHeight", extractValueForKey(directoriesList, "Image Height"));
-            imageReturnMetadata.put("imageWidth", extractValueForKey(directoriesList, "Image Width"));
-            imageReturnMetadata.put("blackAndWhite", String.valueOf(Objects.equals(extractValueForKey(directoriesList, "crs:ConvertToGrayscale"), "True")));
-            imageReturnMetadata.put("rawFileName", extractValueForKey(directoriesList, "crs:RawFileName"));
-            imageReturnMetadata.put("rating", extractValueForKey(directoriesList, "xmp:Rating"));
-            imageReturnMetadata.put("title", file.getOriginalFilename());
-
-            return imageReturnMetadata;
-        } catch (Exception e) {
-            e.printStackTrace();
+        if (file == null) {
+            log.error("Null file provided to getImageMetadata");
+            Map<String, String> errorMetadata = new HashMap<>();
+            errorMetadata.put("error", "No file provided");
+            return errorMetadata;
         }
-        return null;
-    }
 
-    private Integer parseIntegerOrDefault(String value, Integer defaultValue) {
-        if (value == null) {
-            return defaultValue;
-        }
         try {
-            return Integer.parseInt(value.replaceAll("\\D+", ""));
-        } catch (NumberFormatException e) {
-            return defaultValue;
+            log.info("Extracting metadata from image: {}", file.getOriginalFilename());
+
+            // Use the utility method to extract metadata
+            // The utility method already handles errors and returns a complete metadata map
+            return imageProcessingUtil.extractImageMetadata(file);
+        } catch (Exception e) {
+            log.error("Error extracting image metadata: {}", e.getMessage(), e);
+            
+            // Return basic metadata with error information on failure
+            Map<String, String> errorMetadata = new HashMap<>();
+            errorMetadata.put("title", file.getOriginalFilename());
+            errorMetadata.put("error", e.getMessage());
+            return errorMetadata;
         }
-    }
-
-//    @Override
-//    public List<PhotoCategoryPackage> getImagesByCategory(List<String> categories) {
-//        return null;
-//    }
-
-    // TODO: Delete once not in use
-    public List<Map<String, Object>> collectAllDirectoriesMetadata(Metadata metadata) {
-        List<Map<String, Object>> directoriesList = new ArrayList<>();
-
-        for (Directory directory : metadata.getDirectories()) {
-            Map<String, Object> directoryData = new HashMap<>();
-            Map<String, String> tagMap = new HashMap<>();
-
-            for (Tag tag : directory.getTags()) {
-                tagMap.put(tag.getTagName(), tag.getDescription());
-            }
-
-            // Special handling for XMP Directory
-            if (directory instanceof XmpDirectory xmpDirectory) {
-                Map<String, String> xmpProperties = xmpDirectory.getXmpProperties();
-                if (xmpProperties != null) {
-                    // Prefix XMP properties to distinguish them from standard tags
-                    tagMap.putAll(xmpProperties);
-                }
-            }
-
-            directoryData.put(directory.getClass().getSimpleName(), tagMap);
-            directoriesList.add(directoryData);
-        }
-        return directoriesList;
-    }
-
-    // TODO: Delete once not in use
-    public static String extractValueForKey(List<Map<String, Object>> directoriesList, String targetKey) {
-        // loop through each directory
-        for (Map<String, Object> directoryData : directoriesList) {
-
-            // each key in directoryData map is the directoryname, and the value is the metadata map
-            for (Map.Entry<String, Object> entry : directoryData.entrySet()) {
-
-                // cast the value to Map<String, String> as we know it's the structure of our metadata
-                Map<String, String> metadata = (Map<String, String>) entry.getValue();
-
-                // check if this metadata map contains the target key
-                if (metadata.containsKey(targetKey)) {
-                    return metadata.get(targetKey);
-                }
-            }
-//            Map<String, String> metdata = (Map<String, String>) directoryData.get("metadata")
-        }
-        return null;
     }
 }
